# myleagues-api

./: .gitignore  .gitlab-ci.yml  Dockerfile.dev  README.md  app.yaml  main.py  pyproject.toml  requirements.txt  setup.cfg  wsgi.py
myleagues_api/: __init__.py  db.py
myleagues_api/configs/: postgresql.py  sqlite.py
myleagues_api/endpoints/: league.py  match.py  oauth.py  saml.py  user.py
myleagues_api/models/: access_token.py  league.py  match.py  user.py
myleagues_api/models/oauth_providers/: default_avatar.py  oauth_provider.py  oauth_provider_google.py  oauth_provider_microsoft.py
myleagues_api/models/ranking_systems/: ranking.py  ranking_perron_frobenius.py  ranking_regular.py
myleagues_api/models/saml_providers/: saml_provider.py  saml_provider_google.py
myleagues_api/tables/: participations.py
