[metadata]
name = myleagues_api
version = 1.0.0
description = MyLeagues API

[options]
packages = find:
packages_dir =
    =.
install_requires =
    pyopenssl==20.0.1
    cryptography==3.4.6
    pyjwt==2.0.1
    requests==2.25.1
    flask==1.1.2
    sqlalchemy==1.3.23
    Flask-SQLAlchemy==2.4.4
    Flask-Cors==3.0.10
    psycopg2-binary==2.9.1

[options.extras_require]
testing =
    coverage>=5.3.1
    unittest2>=1.1.0
