[metadata]
name = myleagues_api
version = 1.0.0
description = MyLeagues API

[options]
packages = find:
packages_dir =
    =.
install_requires =
    pyopenssl==20.0.1
    cryptography==3.4.6
    pyjwt==2.0.1
    requests==2.25.1
    flask==1.1.2
    sqlalchemy==1.3.23
    Flask-SQLAlchemy==2.4.4
    Flask-Cors==3.0.10
    oauthlib==3.1.1
    psycopg2-binary==2.9.1
    numpy==1.21.2


[options.extras_require]
testing =
    coverage>=5.3.1
    unittest2>=1.1.0

[flake8]
# Recommend matching the black line length (default 88),
# rather than using the flake8 default of 79:
max-line-length = 88
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,

[pycodestyle]
# Recommend matching the black line length (default 88),
# rather than using the pycodestyle default of 79:
max-line-length = 88
ignore = E203, W503, W504

[pydocstyle]
ignore = D100, D104, D107, D202, D213, D203, D413, D400

[mypy]
ignore_missing_imports = True
